<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.bluetrainsoftware.example.server</groupId>
	<artifactId>server</artifactId>
	<version>1.1-SNAPSHOT</version>
	<name>server</name>

	<properties>
		<grizzly.version>2.4.4</grizzly.version>
		<jersey.version>2.28</jersey.version>
    <jackson.version>[2.12.7.1]</jackson.version>
    <log4j.version>2.8.2</log4j.version>
    <lmax.disruptor>3.3.6</lmax.disruptor>
    <swagger.version>1.5.22</swagger.version>
	</properties>

	<dependencies>
    <!-- openapi support -->
		<dependency>
			<groupId>cd.connect.openapi.gensupport</groupId>
			<artifactId>openapi-generator-support</artifactId>
			<version>1.1</version>
		</dependency>
    <dependency>
      <groupId>io.swagger</groupId>
      <artifactId>swagger-annotations</artifactId>
      <version>${swagger.version}</version>
    </dependency>

    <!-- jersey support -->
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-servlet-core</artifactId>
      <version>[${jersey.version}]</version>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-multipart</artifactId>
      <version>[${jersey.version}]</version>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-json-jackson</artifactId>
      <version>[${jersey.version}]</version>
      <exclusions>
        <exclusion>
          <artifactId>jackson-annotations</artifactId>
          <groupId>com.fasterxml.jackson.core</groupId>
        </exclusion>
        <exclusion>
          <artifactId>jackson-jaxrs-base</artifactId>
          <groupId>com.fasterxml.jackson.jaxrs</groupId>
        </exclusion>
        <exclusion>
          <artifactId>jackson-jaxrs-json-provider</artifactId>
          <groupId>com.fasterxml.jackson.jaxrs</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.glassfish.hk2</groupId>
      <artifactId>hk2-api</artifactId>
      <version>2.5.0</version>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jersey.inject</groupId>
      <artifactId>jersey-hk2</artifactId>
      <version>${jersey.version}</version>
    </dependency>

    <!-- grizzly for jersey, can use netty as well -->
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-grizzly2-http</artifactId>
			<version>${jersey.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.glassfish.grizzly</groupId>
					<artifactId>grizzly-http-server</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.glassfish.grizzly</groupId>
			<artifactId>grizzly-http-server</artifactId>
			<version>${grizzly.version}</version>
		</dependency>

    <!-- jackson -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>[${jackson.version}]</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>[${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>[${jackson.version}]</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <version>[${jackson.version}]</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.jaxrs</groupId>
      <artifactId>jackson-jaxrs-base</artifactId>
      <version>[${jackson.version}]</version>
    </dependency>

    <!-- logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jul-to-slf4j</artifactId>
      <version>[1.7.25]</version>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>[${log4j.version}]</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>[${log4j.version}]</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>[${log4j.version}]</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-1.2-api</artifactId>
      <version>[${log4j.version}]</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-jul</artifactId>
      <version>[${log4j.version}]</version>
    </dependency>
    <dependency>
      <groupId>com.lmax</groupId>
      <artifactId>disruptor</artifactId>
      <version>[${lmax.disruptor}]</version>
    </dependency>

    <!-- java 11+ requirements -->
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-core</artifactId>
      <version>2.3.0.1</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>2.3.0.1</version>
    </dependency>
    <dependency>
      <groupId>javax.activation</groupId>
      <artifactId>activation</artifactId>
      <version>1.1.1</version>
    </dependency>
	</dependencies>

  <profiles>
    <profile>
      <id>docker</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.google.cloud.tools</groupId>
            <artifactId>jib-maven-plugin</artifactId>
            <version>1.7.0</version>
            <executions>
              <execution>
                <id>docker-build</id>
                <phase>package</phase>
                <goals>
                  <goal>buildTar</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <allowInsecureRegistries>false</allowInsecureRegistries>
              <from>
                <image>adoptopenjdk:11-jre-hotspot</image>
              </from>
              <to>
                <image>dart-ogurets/${project.artifactId}</image>
              </to>
              <container>
                <mainClass>com.bluetrainsoftware.example.server.Application</mainClass>
                <jvmFlags>
                  <jvmFlag>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</jvmFlag>
                  <jvmFlag>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmFlag>
                </jvmFlags>
                <ports>
                  <port>8076</port>
                </ports>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

	<build>
		<finalName>app</finalName>
		<plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>11</release>
          <source>11</source>
          <target>11</target>
          <executable>javac11</executable>
          <useIncrementalCompilation>false</useIncrementalCompilation>
        </configuration>
      </plugin>

			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>4.0.0</version>
				<dependencies>
					<dependency>
						<groupId>cd.connect.openapi</groupId>
						<artifactId>connect-openapi-jersey2</artifactId>
						<version>4.7</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>api</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>generate-sources</phase>
						<configuration>
							<output>${project.basedir}/target/generated-sources/api</output>
							<apiPackage>com.bluetrainsoftware.example.api</apiPackage>
							<modelPackage>com.bluetrainsoftware.example.model</modelPackage>
							<inputSpec>${project.basedir}/../api/src/main/resources/counter.yaml</inputSpec>
							<language>jersey2-api</language>
							<library>jersey2-api</library>

							<additionalProperties>
								<additionalProperty>server-security</additionalProperty>
							</additionalProperties>

							<configOptions>
								<configOption>
									<name>useBeanValidation</name>
									<value>true</value>
								</configOption>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>add-generated-source</id>
						<phase>initialize</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>${project.build.directory}/generated-sources/api/src/gen</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
